--- a/index.html
+++ b/index.html
@@ -45,23 +45,32 @@
       <li>WordPress</li>
       <li>SEO & Social Media Marketing</li>
     </ul>
-  </section>
-
-  <section id="projects" data-aos="fade-up">
-    <h1>Projects</h1>
-    <div class="projects-container">
-      <div class="project">
-        <h3><a href="https://github.com/tayyabmehmod/Banking_system" target="_blank">ATM Simulator System</a></h3>
-        <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
-        <p>🏦 Welcome to SmartBank ATM Simulator... practical banking experience! 🚀💻</p>
+    <section id="projects" data-aos="fade-up">
+      <h2>Projects</h2>
+      <div class="projects-container">
+        <div class="project">
+          <h3><a href="https://github.com/tayyabmehmod/Banking_system" target="_blank">ATM Simulator System</a></h3>
+          <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
+          <p>🏦 Welcome to SmartBank ATM Simulator... practical banking experience! 🚀💻</p>
+          <div class="project-tags">
+            <span class="tag">Java</span>
+            <span class="tag">OOP</span>
+            <span class="tag">SQL</span>
+          </div>
+        </div>
+    
+        <div class="project">
+          <h3><a href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Nature Wonder Website</a></h3>
+          <img src="images/nature.png" alt="Nature Wonder" class="project-image" />
+          <p>🌿 Welcome to Nature Wonder! 🌎✨ Discover the breathtaking beauty... one wonder at a time! 🌈🦩🌲</p>
+          <div class="project-tags">
+            <span class="tag">HTML/CSS/JavaScript</span>
+            <span class="tag">Web Design</span>
+          </div>
+        </div>
       </div>
-      <div class="project">
-        <h3><a href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Nature Wonder Website</a></h3>
-        <img src="images/nature.png" alt="Nature Wonder" class="project-image" />
-        <p>🌿 Welcome to Nature Wonder! 🌎✨ Discover the breathtaking beauty... one wonder at a time! 🌈🦩🌲</p>
-      </div>
-    </div>
-  </section>
+    </section>
+    
 
   <section id="certifications" data-aos="fade-up">
     <h2>Certifications</h2>
