--- a/index.html
+++ b/index.html
@@ -1,113 +1,118 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Digital Marketer." />
+    <title>Tayyab Mehmood | Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+  </head>
+  <body>
+    <header>
+      <p class="tagline">Developer | Content Creator | Digital Marketer</p>
+      <nav class="sidebar" id="sidebar">
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#certifications">Certifications</a>
+        <a href="#resume">Curriculum Vitae</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Digital Marketer." />
-  <title>Tayyab Mehmood | Portfolio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
-</head>
+    <section id="about" data-aos="fade-up">
+      <h2>About Me</h2>
+      <h1>Tayyab Mehmood</h1>
+      <p>A passionate developer and content creator with a knack for technology and digital marketing...</p>
+      <p>Proficient in Java, Python, and C++... clean, modular code.</p>
+      <p>Skilled in front-end/back-end web dev & WordPress...</p>
+      <p>Also an experienced social media marketer, blogger, and content writer...</p>
+      <p>I thrive in fast-paced environments where creativity meets technology.</p>
+    </section>
 
-<body>
-  <header>
-    <p class="tagline">Developer | Content Creator | Digital Marketer</p>
-    
-    <nav class="sidebar" id="sidebar">
-      <a href="#about">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#projects">Projects</a>
-      <a href="#certifications">Certifications</a>
-      <a href="#resume">Curriculum Vitae</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+    <section id="skills" data-aos="fade-up">
+      <h2>Skills</h2>
+      <ul class="skills-list">
+        <li>Java</li>
+        <li>Python</li>
+        <li>C++</li>
+        <li>HTML/CSS/JS</li>
+        <li>WordPress</li>
+        <li>SEO & Social Media Marketing</li>
+      </ul>
+    </section>
 
-  <section id="about" data-aos="fade-up">
-    <h2>About Me</h2>
-    <h1>Tayyab Mehmood</h1>
-    <p>A passionate developer and content creator with a knack for technology and digital marketing...</p>
-    <p>Proficient in Java, Python, and C++... clean, modular code.</p>
-    <p>Skilled in front-end/back-end web dev & WordPress...</p>
-    <p>Also an experienced social media marketer, blogger, and content writer...</p>
-    <p>I thrive in fast-paced environments where creativity meets technology.</p>
-  </section>
-
-  <section id="skills" data-aos="fade-up">
-    <h2>Skills</h2>
-    <ul class="skills-list">
-      <li>Java</li>
-      <li>Python</li>
-      <li>C++</li>
-      <li>HTML/CSS/JS</li>
-      <li>WordPress</li>
-      <li>SEO & Social Media Marketing</li>
-    </ul>
-  </section>
-
-  <section id="projects" data-aos="fade-up">
-    <h2>Projects</h2>
-    <div class="projects-container">
-      <div class="project">
-        <h3>ATM Simulator System</h3>
-        <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
-        <div class="project-tags">
-          <span class="tag">Java</span>
-          <span class="tag">OOP</span>
-          <span class="tag">SQL</span>
+    <section id="projects" data-aos="fade-up">
+      <h2>Projects</h2>
+      <div class="projects-container">
+        <div class="project">
+          <h3>ATM Simulator System</h3>
+          <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
+          <div class="project-tags">
+            <span class="tag">Java</span>
+            <span class="tag">OOP</span>
+            <span class="tag">SQL</span>
+          </div>
+          <a class="read-more-btn" href="https://github.com/tayyabmehmod/Banking_system" target="_blank">Read more</a>
         </div>
-        <a class="read-more-btn" href="https://github.com/tayyabmehmod/Banking_system" target="_blank">Read more</a>
-      </div>
-  
-      <div class="project">
-        <h3>Nature Wonder Website</h3>
-        <img src="images/nature.png" alt="Nature Wonder" class="project-image" />
-        <div class="project-tags">
-          <span class="tag">HTML/CSS/JS</span>
-          <span class="tag">Web Design</span>
+
+        <div class="project">
+          <h3>Nature Wonder Website</h3>
+          <img src="images/nature.png" alt="Nature Wonder" class="project-image" />
+          <div class="project-tags">
+            <span class="tag">HTML/CSS/JS</span>
+            <span class="tag">Web Design</span>
+          </div>
+          <a class="read-more-btn" href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Read more</a>
         </div>
-        <a class="read-more-btn" href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Read more</a>
+        <div class="project">
+          <h3>Jarvis with GUI</h3>
+          <img src="images/jarvis.jpeg" alt="Jarvis Screenshot" class="project-image" />
+          <div class="project-tags">
+            <span class="tag">Python</span>
+            <span class="tag">AI</span>
+          </div>
+          <a class="read-more-btn" href="https://github.com/tayyabmehmod/Jarvis-AI" target="_blank">Read more</a>
+        
+        </div>
       </div>
-    </div>
-  </section>
-  
+    </section>
 
-  <section id="certifications" data-aos="fade-up">
-    <h2>Certifications</h2>
-    <div class="cert">
-      <p><a href="https://drive.google.com/file/d/1VRSUO3ZYXC1ph3SbHJnYFmtWUvNev3Gr/view?usp=drive_link" target="_blank">Java Programming Internship – A&D Tech Innovations</a></p>
-      <p>Python, HTML/CSS/JS – Learn At Home</p>
-      <p>Machine Learning – Learn At Home</p>
-      <p>Social Media Marketing – Learn At Home</p>
-    </div>
-  </section>
+    <section id="certifications" data-aos="fade-up">
+      <h2>Certifications</h2>
+      <div class="cert">
+        <p><a href="https://drive.google.com/file/d/1VRSUO3ZYXC1ph3SbHJnYFmtWUvNev3Gr/view?usp=drive_link" target="_blank">Java Programming Internship – A&D Tech Innovations</a></p>
+        <p>Python, HTML/CSS/JS – Learn At Home</p>
+        <p>Machine Learning – Learn At Home</p>
+        <p>Social Media Marketing – Learn At Home</p>
+      </div>
+    </section>
 
-  <section id="resume" data-aos="fade-up">
-    <h2>Curriculum Vitae</h2>
-    <p><a href="https://drive.google.com/file/d/1kcG48mEWiEntBRckoQfoi_ETJpT4a77x/view?usp=sharing" download>Download My CV (PDF)</a></p>
-  </section>
+    <section id="resume" data-aos="fade-up">
+      <h2>Curriculum Vitae</h2>
+      <p><a href="https://drive.google.com/file/d/1kcG48mEWiEntBRckoQfoi_ETJpT4a77x/view?usp=sharing" download>Download My CV (PDF)</a></p>
+    </section>
 
-  <section id="contact" data-aos="fade-up">
-    <h2>Contact</h2>
-    <p>Email: tayyabmehmood7b@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank">tayyab-mehmood</a></p>
-    <p>GitHub: <a href="https://github.com/tayyabmehmod" target="_blank">tayyabmehmod</a></p>
-  </section>
+    <section id="contact" data-aos="fade-up">
+      <h2>Contact</h2>
+      <p>Email: tayyabmehmood7b@gmail.com</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank">tayyab-mehmood</a></p>
+      <p>GitHub: <a href="https://github.com/tayyabmehmod" target="_blank">tayyabmehmod</a></p>
+    </section>
 
-  <footer>
-    <p>&copy; 2025 Tayyab Mehmood. All rights reserved.</p>
-  </footer>
+    <footer>
+      <p>&copy; 2025 Tayyab Mehmood. All rights reserved.</p>
+    </footer>
 
-  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-  <script>AOS.init();</script>
-  <script>
-    function toggleSidebar() {
-      document.getElementById("sidebar").classList.toggle("active");
-    }
-  </script>
-</body>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>AOS.init();</script>
+    <script>
+      function toggleSidebar() {
+        document.getElementById("sidebar").classList.toggle("active");
+      }
+    </script>
+  </body>
 </html>
