--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Digital Marketer." />
+   <meta name="description" content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Social Media Marketer." />
     <title>Tayyab Mehmood | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <p class="tagline">Developer | Content Creator | Digital Marketer</p>
+      <p class="tagline">Developer | Content Creator |Social Media Markter </p>
       <nav class="sidebar" id="sidebar">
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
@@ -26,10 +26,10 @@
     <section id="about" data-aos="fade-up">
       <h2>About Me</h2>
       <h1>Tayyab Mehmood</h1>
-      <p>A passionate developer and content creator with a knack for technology and digital marketing...</p>
+      <p>A passionate developer and content creator with a knack for technology and development...</p>
       <p>Proficient in Java, Python, and C++... clean, modular code.</p>
       <p>Skilled in front-end/back-end web dev & WordPress...</p>
-      <p>Also an experienced social media marketer, blogger, and content writer...</p>
+      <p>Also an experienced social media marketer and content writer...</p>
       <p>I thrive in fast-paced environments where creativity meets technology.</p>
     </section>
 
