--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <li>C++</li>
         <li>HTML/CSS/JS</li>
         <li>WordPress</li>
-        <li>SEO & Social Media Marketing</li>
+        <li>Social Media Marketing</li>
       </ul>
     </section>
 
