--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
         <li>Python</li>
         <li>C++</li>
         <li>HTML/CSS/JS</li>
+        <li>Machine Learning</li>
         <li>WordPress</li>
         <li>Social Media Marketing</li>
       </ul>
