--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <header>
-      <p class="tagline">Developer | Content Creator |Social Media Markter </p>
+      <p class="tagline">Turning Ideas into Code & Content | Developer & Creator</p>
       <nav class="sidebar" id="sidebar">
         <a href="#about">About</a>
         <a href="#skills">Skills</a>
@@ -76,7 +76,7 @@
             <span class="tag">Python</span>
             <span class="tag">AI</span>
           </div>
-          <a class="read-more-btn" href="https://github.com/tayyabmehmod/Jarvis-AI" target="_blank">Read more</a>
+          <a class="read-more-btn" href="https://github.com/tayyabmehmod/Jarvis" target="_blank">Read more</a>
         
         </div>
       </div>
@@ -93,16 +93,16 @@
     </section>
 
     <section id="resume" data-aos="fade-up">
-      <h2>Curriculum Vitae</h2>
-      <p><a href="https://drive.google.com/file/d/1kcG48mEWiEntBRckoQfoi_ETJpT4a77x/view?usp=sharing" download>Download My CV (PDF)</a></p>
+      <h2>Resume</h2>
+      <p><a href="https://drive.google.com/file/d/1kcG48mEWiEntBRckoQfoi_ETJpT4a77x/view?usp=sharing" download>Download My Resume (PDF)</a></p>
     </section>
 
     <section id="contact" data-aos="fade-up">
-      <h2>Contact</h2>
-      <p>Email: tayyabmehmood7b@gmail.com</p>
-      <p>LinkedIn: <a href="https://www.linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank">tayyab-mehmood</a></p>
-      <p>GitHub: <a href="https://github.com/tayyabmehmod" target="_blank">tayyabmehmod</a></p>
-    </section>
+  <h2>Contact</h2>
+  <p>Email: tayyabmehmood7b@gmail.com</a></p>
+  <p>LinkedIn: <a href="https://www.linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank">tayyab-mehmood</a></p>
+  <p>GitHub: <a href="https://github.com/tayyabmehmod" target="_blank">tayyabmehmod</a></p>
+</section>
 
     <footer>
       <p>&copy; 2025 Tayyab Mehmood. All rights reserved.</p>
