--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Tayyab Mehmood</h1>
       <p>A passionate developer and content creator with a knack for technology and development...</p>
       <p>Proficient in Java, Python, and C++... clean, modular code.</p>
-      <p>Skilled in front-end/back-end web dev & WordPress...</p>
+      <p>Skilled in front-end/back-end web dev </p>
       <p>Also an experienced social media marketer and content writer...</p>
       <p>I thrive in fast-paced environments where creativity meets technology.</p>
     </section>
