--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <h1>Tayyab Mehmood</h1>
       <p>A passionate developer and content creator with a knack for technology and development...</p>
       <p>Proficient in Java, Python, and C++... clean, modular code.</p>
-      <p>Skilled in front-end/back-end web dev </p>
+      <p>Skilled in front-end/back-end web dev & WordPress...</p>
       <p>Also an experienced social media marketer and content writer...</p>
       <p>I thrive in fast-paced environments where creativity meets technology.</p>
     </section>
@@ -40,7 +40,9 @@
         <li>Python</li>
         <li>C++</li>
         <li>HTML/CSS/JS</li>
-        <li>Machine Learning</li
+        <li>Machine Learning</li>
+        <li>WordPress</li>
+        <li>Social Media Marketing</li>
       </ul>
     </section>
 
@@ -75,7 +77,15 @@
             <span class="tag">AI</span>
           </div>
           <a class="read-more-btn" href="https://github.com/tayyabmehmod/Jarvis" target="_blank">Read more</a>
-        
+        </div>
+        <div class="project">
+          <h3>Code World</h3>
+          <img src="images\code.png" alt="code Screenshot" class="project-image" />
+          <div class="project-tags">
+            <span class="tag">HTML/CSS/JS</span>
+            <span class="tag">Web Design</span>
+          </div>
+          <a class="read-more-btn" href="https://github.com/tayyabmehmod/code_world" target="_blank">Read more</a>
         </div>
       </div>
     </section>
