--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-   <meta name="description" content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Social Media Marketer." />
+    <meta name="description" content="Portfolio of Tayyab Mehmood. Developer, Content Creator, and Social Media Marketer." />
     <title>Tayyab Mehmood | Portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
@@ -40,7 +40,6 @@
         <li>Python</li>
         <li>C++</li>
         <li>HTML/CSS/JS</li>
-        <li>Machine Learning</li>
       </ul>
     </section>
 
@@ -78,7 +77,7 @@
         </div>
         <div class="project">
           <h3>Code World</h3>
-          <img src="images\code.png" alt="code Screenshot" class="project-image" />
+          <img src="images/code.png" alt="code Screenshot" class="project-image" />
           <div class="project-tags">
             <span class="tag">HTML/CSS/JS</span>
             <span class="tag">Web Design</span>
@@ -93,7 +92,6 @@
       <div class="cert">
         <p><a href="https://drive.google.com/file/d/1VRSUO3ZYXC1ph3SbHJnYFmtWUvNev3Gr/view?usp=drive_link" target="_blank">Java Programming Internship – A&D Tech Innovations</a></p>
         <p>Python, HTML/CSS/JS – Learn At Home</p>
-        <p>Machine Learning – Learn At Home</p>
         <p>Social Media Marketing – Learn At Home</p>
       </div>
     </section>
@@ -104,11 +102,11 @@
     </section>
 
     <section id="contact" data-aos="fade-up">
-  <h2>Contact</h2>
-  <p>Email: tayyabmehmood7b@gmail.com</a></p>
-  <p>LinkedIn: <a href="https://www.linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank">tayyab-mehmood</a></p>
-  <p>GitHub: <a href="https://github.com/tayyabmehmod" target="_blank">tayyabmehmod</a></p>
-</section>
+      <h2>Contact</h2>
+      <p>Email: tayyabmehmood7b@gmail.com</p>
+      <p>LinkedIn: <a href="https://www.linkedin.com/in/tayyab-mehmood-2b134a284" target="_blank">tayyab-mehmood</a></p>
+      <p>GitHub: <a href="https://github.com/tayyabmehmod" target="_blank">tayyabmehmod</a></p>
+    </section>
 
     <footer>
       <p>&copy; 2025 Tayyab Mehmood. All rights reserved.</p>
