--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
 
   <section id="skills" data-aos="fade-up">
-    <h2>Skills</h2>
+    <h2>Languages</h2>
     <div class="skill-bars">
       <div class="skill">
         <p>Java</p>
@@ -76,51 +76,84 @@
     </div>
   </section>
 
-  <section id="projects" data-aos="fade-up">
-    <h2>Projects</h2>
-    <div class="projects-container">
-      <div class="project">
-        <h3>ATM Simulator System</h3>
-        <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
-        <div class="project-tags">
-          <span class="tag">Java</span>
-          <span class="tag">OOP</span>
-          <span class="tag">SQL</span>
-        </div>
-        <a class="read-more-btn" href="https://github.com/tayyabmehmod/Banking_system" target="_blank">Read more</a>
-      </div>
+  <section id="skills" data-aos="fade-up">
+  <h2>Skills</h2>
+  <ul class="skills-list">
+    <li><strong>Front-End:</strong> HTML, CSS, JavaScript</li>
+    <li><strong>Back-End:</strong> PHP, MySQL</li>
+    <li><strong>Languages:</strong> Java, Python, C++</li>
+    <li><strong>Tools:</strong> Git, VS Code, XAMPP</li>
+  </ul>
+</section>
 
-      <div class="project">
-        <h3>Nature Wonder Website</h3>
-        <img src="images/nature.png" alt="Nature Wonder" class="project-image" />
-        <div class="project-tags">
-          <span class="tag">HTML/CSS/JS</span>
-          <span class="tag">Web Design</span>
-        </div>
-        <a class="read-more-btn" href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Read more</a>
-      </div>
 
-      <div class="project">
-        <h3>Jarvis with GUI</h3>
-        <img src="images/jarvis.jpeg" alt="Jarvis Screenshot" class="project-image" />
-        <div class="project-tags">
-          <span class="tag">Python</span>
-          <span class="tag">AI</span>
-        </div>
-        <a class="read-more-btn" href="https://github.com/tayyabmehmod/Jarvis" target="_blank">Read more</a>
-      </div>
+<section id="projects" data-aos="fade-up">
+  <h2>Projects</h2>
+  <div class="projects-container">
 
-      <div class="project">
-        <h3>Code World</h3>
-        <img src="images/code.png" alt="Code Screenshot" class="project-image" />
-        <div class="project-tags">
-          <span class="tag">HTML/CSS/JS</span>
-          <span class="tag">Web Design</span>
-        </div>
-        <a class="read-more-btn" href="https://github.com/tayyabmehmod/code_world" target="_blank">Read more</a>
+    <!-- Project 1 -->
+    <div class="project">
+      <img src="images/atm.png" alt="ATM Simulator Screenshot" class="project-image" />
+      <h3>ATM Simulator System</h3>
+      <p>A GUI-based banking simulator to perform ATM operations.</p>
+      <div class="project-tags">
+        <span class="tag">Java</span>
+        <span class="tag">OOP</span>
+        <span class="tag">MySQL</span>
+      </div>
+      <div class="project-links">
+        <a href="https://tayyabmehmod.github.io/Banking_system" target="_blank">Visit</a>
       </div>
     </div>
-  </section>
+
+    <!-- Project 2 -->
+    <div class="project">
+      <img src="images/nature.png" alt="Nature Wonder" class="project-image" />
+      <h3>Nature Wonder Website</h3>
+      <p>A static website showcasing beautiful nature scenes and facts.</p>
+      <div class="project-tags">
+        <span class="tag">HTML</span>
+        <span class="tag">CSS</span>
+        <span class="tag">JavaScript</span>
+      </div>
+      <div class="project-links">
+        <a href="https://tayyabmehmod.github.io/Nature-wonder" target="_blank">Visit</a>
+      </div>
+    </div>
+
+    <!-- Project 3 -->
+    <div class="project">
+      <img src="images/jarvis.jpeg" alt="Jarvis Screenshot" class="project-image" />
+      <h3>Jarvis with GUI</h3>
+      <p>A voice assistant made with Python to automate tasks using GUI.</p>
+      <div class="project-tags">
+        <span class="tag">Python</span>
+        <span class="tag">AI</span>
+        <span class="tag">Tkinter</span>
+      </div>
+      <div class="project-links">
+        <a href="https://tayyabmehmod.github.io/Jarvis" target="_blank">Visit</a>
+      </div>
+    </div>
+
+    <!-- Project 4 -->
+    <div class="project">
+      <img src="images/code.png" alt="Code World Screenshot" class="project-image" />
+      <h3>Code World</h3>
+      <p>An educational code-sharing platform prototype using frontend tech.</p>
+      <div class="project-tags">
+        <span class="tag">HTML</span>
+        <span class="tag">CSS</span>
+        <span class="tag">JavaScript</span>
+      </div>
+      <div class="project-links">
+        <a href="https://tayyabmehmod.github.io/code_world" target="_blank">Visit</a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
   <section id="technologies" data-aos="fade-up">
     <h2>Technologies I Use</h2>
@@ -165,7 +198,7 @@
   <section id="contact">
     <div class="contact-container">
       <h2>Contact Me</h2>
-      <form action="https://formspree.io/f/mqkwjzdo" method="POST">
+      <form action="https://formspree.io/f/mwpbjlrl" method="POST">
         <input type="text" name="name" placeholder="Your Name" required>
         <input type="email" name="_replyto" placeholder="Your Email" required>
         <textarea name="message" placeholder="Your Message" required></textarea>
@@ -233,13 +266,15 @@
   <script>
   new Typed('#typed-about', {
     strings: [
-      " A passionate developer and content creator with a knack for technology and development. Proficient in Java, Python, and C++... clean, modular code. Skilled in front-end/back-end web dev. Also an experienced social media marketer and content writer. I thrive in fast-paced environments where creativity meets technology."
-    ],
+    "A dedicated Full-Stack Developer with a passion for building responsive, user-friendly websites and web applications. I specialize in both front-end and back-end development, turning ideas into fully functional solutions using HTML, CSS, JavaScript, PHP, and MySQL.",
+    "Alongside my web development expertise, I have hands-on experience with programming languages like Java, Python, and C++, which enhance my ability to develop robust and efficient software systems.",
+    "I’m driven by a love for clean UI design, smooth user experiences, and continuous learning. In the near future, I aim to expand my skill set into Android development to explore the mobile app space and create impactful cross-platform solutions"
+  ],
     typeSpeed: 40,
     startDelay: 500,
     backSpeed: 0,          // Not needed since it won't delete
     backDelay: 4000,       // How long to pause at the end
-    loop: false,
+    loop: true,
     showCursor: true
   });
 </script>
