--- a/index.html
+++ b/index.html
@@ -164,6 +164,7 @@
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML5" title="HTML5">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS3" title="CSS3">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" title="JavaScript">
+      <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/php/php-original.svg" alt="PHP" title="PHP">
       <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL" title="MySQL">
     </div>
   </section>
@@ -195,17 +196,18 @@
     <p><a href="https://drive.google.com/file/d/1kcG48mEWiEntBRckoQfoi_ETJpT4a77x/view?usp=sharing" download>Download My Resume (PDF)</a></p>
   </section>
 
-  <section id="contact">
-    <div class="contact-container">
-      <h2>Contact Me</h2>
-      <form action="https://formspree.io/f/mwpbjlrl" method="POST">
-        <input type="text" name="name" placeholder="Your Name" required>
-        <input type="email" name="_replyto" placeholder="Your Email" required>
-        <textarea name="message" placeholder="Your Message" required></textarea>
-        <button type="submit">Send</button>
-      </form>
-    </div>
-  </section>
+ <section id="contact">
+  <div class="contact-container">
+    <h2>Contact Me</h2>
+    <form id="contact-form" action="https://formspree.io/f/mwpbjlrl" method="POST">
+      <input type="text" name="name" placeholder="Your Name" required>
+      <input type="email" name="_replyto" placeholder="Your Email" required>
+      <textarea name="message" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+    <p id="form-message" class="form-status"></p>
+  </div>
+</section>
 
   <footer>
     <p>© 2025 Tayyab Mehmood</p>
@@ -278,8 +280,36 @@
     showCursor: true
   });
 </script>
+<script>
+  const form = document.getElementById('contact-form');
+  const formMessage = document.getElementById('form-message');
 
+  form.addEventListener('submit', async function (e) {
+    e.preventDefault();
+    const data = new FormData(form);
+    const action = form.getAttribute('action');
 
+    try {
+      const response = await fetch(action, {
+        method: 'POST',
+        body: data,
+        headers: { 'Accept': 'application/json' }
+      });
+
+      if (response.ok) {
+        formMessage.textContent = "Message sent successfully!";
+        formMessage.style.color = "skyblue";
+        form.reset();
+      } else {
+        formMessage.textContent = "Oops! Something went wrong.";
+        formMessage.style.color = "red";
+      }
+    } catch (error) {
+      formMessage.textContent = "Network error. Please try again.";
+      formMessage.style.color = "orange";
+    }
+  });
+</script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
 </body>
