--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <span class="tag">MySQL</span>
       </div>
       <div class="project-links">
-        <a href="https://tayyabmehmod.github.io/Banking_system" target="_blank">Visit</a>
+        <a href="https://github.com/tayyabmehmod/Banking_system" target="_blank">Visit</a>
       </div>
     </div>
 
@@ -117,7 +117,7 @@
         <span class="tag">JavaScript</span>
       </div>
       <div class="project-links">
-        <a href="https://tayyabmehmod.github.io/Nature-wonder" target="_blank">Visit</a>
+        <a href="https://github.com/tayyabmehmod/Nature-wonder" target="_blank">Visit</a>
       </div>
     </div>
 
@@ -132,7 +132,7 @@
         <span class="tag">Tkinter</span>
       </div>
       <div class="project-links">
-        <a href="https://tayyabmehmod.github.io/Jarvis" target="_blank">Visit</a>
+        <a href="https://github.com/tayyabmehmod/Jarvis" target="_blank">Visit</a>
       </div>
     </div>
 
@@ -147,7 +147,7 @@
         <span class="tag">JavaScript</span>
       </div>
       <div class="project-links">
-        <a href="https://tayyabmehmod.github.io/code_world" target="_blank">Visit</a>
+        <a href="https://github.com/tayyabmehmod/code_world" target="_blank">Visit</a>
       </div>
     </div>
 
