--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
         <p>HTML/CSS/JS</p>
         <div class="skill-bar"><div class="fill" data-width="90%"></div></div>
       </div>
+      <div class="skill">
+        <p>Php</p>
+        <div class="skill-bar"><div class="fill" data-width="70%"></div></div>
+      </div>
     </div>
   </section>
 
@@ -169,27 +173,33 @@
     </div>
   </section>
 
-  <section id="certifications" data-aos="fade-up">
+ <section id="certifications" data-aos="fade-up">
   <h2>Certifications</h2>
   <div class="certifications-container">
     <div class="cert-card">
       <i class="fas fa-code"></i>
-      <p><a href="https://drive.google.com/file/d/1VRSUO3ZYXC1ph3SbHJnYFmtWUvNev3Gr/view?usp=drive_link" target="_blank">Java Programming Internship</a></p>
+      <p><a href="https://drive.google.com/file/d/1VRSUO3ZYXC1ph3SbHJnYFmtWUvNev3Gr/view?usp=drive_link" target="_blank">View Java Internship Certificate</a></p>
       <span>A&D Tech Innovations</span>
     </div>
+
     <div class="cert-card">
-      <i class="fas fa-laptop-code"></i>
-      <p>Python, HTML/CSS/JS</p>
-      <span>Learn At Home</span>
+      <i class="fas fa-code"></i>
+      <p><a href="https://drive.google.com/file/d/1KXyLsyS198cvyAJo774Kb3cUUQgAWTow/view?usp=sharing" target="_blank">View Python Certificate</a></p>
+      <span>Mind Luster</span>
     </div>
+
     <div class="cert-card">
-      <i class="fas fa-bullhorn"></i>
-      <p>Social Media Marketing</p>
+      <i class="fas fa-code"></i>
+      <p><a href="https://drive.google.com/file/d/1mRxg7XDH4x0QSIANJBl222N5jCSsMACi/view?usp=sharing" target="_blank">View PHP Certificate</a></p>
+      <span>Mind Luster</span>
+    </div>
+      <div class="cert-card">
+      <i class="fas fa-laptop-code"></i>
+      <p>HTML/CSS/JS</p>
       <span>Learn At Home</span>
     </div>
   </div>
 </section>
-
 
   <section id="resume" data-aos="fade-up">
     <h2>Resume</h2>
