--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <p><span id="typed-about"></span></p>
     </div>
     <div class="about-image">
-      <img src="images/tb.png" alt="Tayyab Mehmood">
+      <img src="images/tyb.png" alt="Tayyab Mehmood">
     </div>
   </div>
 </section>
